--- a/app/client/html/app.html
+++ b/app/client/html/app.html
@@ -19,7 +19,7 @@
       {{#each pens}}
       <tr>
          <td>
-            {{name}}
+            {{penId}} {{name}}
          </td>
          {{#with event}}
          <td>
